--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <h2>Who am I</h2>
 
             <p>
-              My name is Ricardo Schalkwyk, I'm a calm and optimistic person, I
+              My NAME is Ricardo Schalkwyk, I'm a calm and optimistic person, I
               have only recently started my journey with coding and i have found
               it to be profoundly interresting and fun, I would say I am an
               optimistic person.
