Updated and included sentences

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <a class="nav-link" href="#skills">Experience</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact">Contact me</a>
+              <a class="nav-link" href="#contact">Contact</a>
             </li>
           </ul>
         </div>
@@ -81,21 +81,20 @@
             <h2>Who am I</h2>
 
             <p>
-              My NAME is Ricardo Schalkwyk, I'm a calm and optimistic person, I
+              My name is Ricardo Schalkwyk, I'm a calm and optimistic person, I
               have only recently started my journey with coding and i have found
-              it to be profoundly interresting and fun, I would say I am an
-              optimistic person.
+              it to be profoundly interresting and fun.
             </p>
 
             <p>
               Who I am is someone that wants to reach my full potential in what
-              I do.
+              I do and what I want is to become the best I can be in this
+              industry,
             </p>
 
             <p>
-              What I want is to become the best I can be in this industry, my
-              long term goal is to reach the level of a team-lead position,
-              although i know this wil take time I will still push myself to
+              My long term goal is to reach the level of a team-lead position,
+              although i know this will take time I will still push myself to
               reach that goal no matter how much time it takes.
             </p>
 
@@ -125,8 +124,17 @@
               <li>Basic CSS</li>
               <li>Basic understanding of JavaScript</li>
             </ul>
-
             <br />
+            <h2>Competencies</h2>
+
+            <p>
+              I would not say my judgement is perfect but I do think very
+              carefully about what I do, I tend to look at different
+              perspectives to understand every side.
+            </p>
+
+            <p>If I cannot see every number on a die</p>
+
             <br />
 
             <h2>Education</h2>
@@ -155,7 +163,9 @@
                 ><strong>contact-section</strong></a
               >
               you will find some of the projects I have worked on like my first
-              Capstone project which was made to be an ecommerce site.
+              Capstone project which was made to be an ecommerce site, I was
+              tasked with creating a simple catalogue page aswell as adding a
+              functional cart page.
             </p>
           </div>
           <div class="col-sm-4">
